@@ -127,9 +127,9 @@ Disc(
   MUSCL(
     FLUX=FLUX_FDS;
     AVERAGING=AVERAGING_ROE;
-    AOWENO_TYPE=AOWENO_TYPE_DIFFUSIVE;
-    AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.999999;
+    AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
+    AOWENO_gammalo=1-1e-1;
+    AOWENO_gammahi=AOWENO_gammalo;
     INTERPOL=INTERPOL_AOWENO9;
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
     FACEINTEG=FACEINTEG_CENTRAL3; 
